Improving javadoc comments